--- a/cliente/templates/factura/listarFacturas.html
+++ b/cliente/templates/factura/listarFacturas.html
@@ -6,6 +6,8 @@
     <div class="title-block">
         <h1 class="title"> Listar facturas </h1>
         <p class="title-description"> Verifique las facturas agregadas</p>
+        <br>
+        <a href="/generar_imagen/{{ cliente.id}}" class="btn btn-primary">Generar Imagen</a>
     </div>
     <section class="section">
         <div class="row">
