--- a/core/templates/comun/sidebar.html
+++ b/core/templates/comun/sidebar.html
@@ -44,17 +44,29 @@
                                 </li>
                                 <!-- Fin de sub-menu de Clientes Retirados -->
                                 
-                                <!-- Sub-menu de Clientes Retirados-->
+                                <!-- Sub-menu de Clientes Suspendidos-->
                                 <li>
                                     <a href="">
-                                        <i class="fa fa-times-circle-o"></i>Clientes Suspendidos
+                                        <i class="fa fa-exclamation-triangle"></i>Clientes Suspendidos
                                         <i class="fa arrow"></i>
                                     </a>
                                     <ul class="sidebar-nav">
             <li><a href="/listar_suspendidos"><i class="fa fa-times"></i>Listado Suspendidos </a></li>
                                     </ul>
                                 </li>
-                                <!-- Fin de sub-menu de Clientes Retirados -->
+                                <!-- Fin de sub-menu de Clientes Suspendidos -->
+
+                                <!-- Sub-menu de Clientes Recoger Equipo-->
+                                <li>
+                                    <a href="">
+                                        <i class="fa fa-ban"></i>Recoger Equipo
+                                        <i class="fa arrow"></i>
+                                    </a>
+                                    <ul class="sidebar-nav">
+            <li><a href="/listar_requipo"><i class="fa fa-times"></i>Listado Recoger Equipo </a></li>
+                                    </ul>
+                                </li>
+                                <!-- Fin de sub-menu de Clientes Recoger Equipo -->
                                 
                                 <!-- Sub-menu de usuarios -->
                                 <li>
