--- a/cliente/templates/cliente/agregarCliente.html
+++ b/cliente/templates/cliente/agregarCliente.html
@@ -210,6 +210,18 @@ function clienteCamposOcultos(esto)
 <!-----------------   FIN DE CAMPOS ---------------------------------->
 
 
+<!-----------------   CAMPO DE AP ------------------>
+
+<div class="form-group">
+	<label for="{{ form.ap.name }}">
+		{{form.ap.label}}
+	</label>
+		{{form.ap}}
+</div>
+
+<!-----------------   FIN DE CAMPOS ---------------------------------->
+
+
 <!-----------------   CAMPO DE LA DIRECCION DEL CLIENTE ------------------>
 
 <div class="form-group">
