--- a/cliente/templates/cliente/listarClientes.html
+++ b/cliente/templates/cliente/listarClientes.html
@@ -48,6 +48,7 @@
                                                 <td><strong>Fecha de Instalacion</strong></td>
                                                 <td><strong>Tipo de Instalacion</strong></td>
                                                 <td><strong>Municipio</strong></td>
+                                                <td><strong>Ap</strong></td>
                                                 <td><strong>Equipos</strong></td>
                                                 <td><strong>Megas</strong></td>
                                                 <td><strong>Direccion</strong></td>                                  
@@ -73,7 +74,8 @@
                                                 <td>{{fila.valor_instalacion}}</td>
                                                 <td>{{fila.fecha_instalacion}}</td>	
                                                 <td>{{fila.tipo_instalacion}}</td>
-                                                <td>{{fila.municipio}}</td>                                       
+                                                <td>{{fila.municipio}}</td>    
+                                                <td>{{fila.ap}}</td>                                       
                                                 <td>{{fila.equipos}}</td>
                                                 <td>{{fila.cap_megas}}</td>
                                                 <td>{{fila.direccion}}</td>                                          
