--- a/core/templates/comun/sidebar.html
+++ b/core/templates/comun/sidebar.html
@@ -68,6 +68,18 @@
                                 </li>
                                 <!-- Fin de sub-menu de Clientes Recoger Equipo -->
                                 
+                                <!-- Sub-menu de Mensajeria AP-->
+                                <li>
+                                    <a href="">
+                                        <i class="fa fa-commenting"></i>Mensajeria AP
+                                        <i class="fa arrow"></i>
+                                    </a>
+                                    <ul class="sidebar-nav">
+            <li><a href="/listar_reportAp"><i class="fa fa-comment"></i>Filtrar por AP </a></li>
+                                    </ul>
+                                </li>
+                                <!-- Fin de sub-menu Mensajeria AP -->
+                                
                                 <!-- Sub-menu de usuarios -->
                                 <li>
                                     <a href="">
