--- a/cliente/templates/factura/verFacturaRetirada.html
+++ b/cliente/templates/factura/verFacturaRetirada.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
             </div>
-                <a href="/generarFacturaPDF/{{ factura.id}}" class="btn btn-secondary btn-lg"><em
+                <a href="/generarFacturaPDF/{{ factura.id}}" class="btn btn-primary btn-lg"><em
                         class="fa fa-print"></em>Generar PDF</a>
             </div>
 
