--- a/core/templates/perfil/verPerfil.html
+++ b/core/templates/perfil/verPerfil.html
@@ -6,9 +6,9 @@
 	    <div class="title-block">
           <h3 class="title">Ver Perfil de '{{perfil.username}}'</h3>
           <p class="title-description">Observe los datos actuales de este perfil o use los otros modulos de abajo</p> 
-          <a href="/perfil/editar/{{ perfil.id }}" class="btn btn-lg btn-info"> <em class="fa fa-pencil"></em> Editar perfil </a>
+          <a href="/perfil/editar/{{ perfil.id }}" class="btn btn btn-info"> <em class="fa fa-pencil"></em> Editar perfil </a>
 
-          <a href="/perfil/clave/{{ perfil.id }}" class="btn btn-lg btn-info"> <em class="fa fa-pencil"></em> Cambiar clave </a>        
+          <a href="/perfil/clave/{{ perfil.id }}" class="btn btn btn-info"> <em class="fa fa-pencil"></em> Cambiar clave </a>        
         </div>
 
 <section class="section">
@@ -49,7 +49,7 @@
 <!-- FIN DE MENSAJES DE ERROR O EXITO  -->
 
 
-						<div class="col-xl-12">
+						<div class="col-xl-4">
                                 <div class="card card-primary">
                                     <div class="card-header">
                                         <div class="header-block">
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
 
-						<div class="col-xl-12">
+						<div class="col-xl-4">
                                 <div class="card card-primary">
                                     <div class="card-header">
                                         <div class="header-block">
@@ -75,7 +75,7 @@
                                 </div>
                          </div>
 
-						<div class="col-xl-12">                       
+						<div class="col-xl-4">                       
                                 <div class="card card-primary">
                                     <div class="card-header">
                                         <div class="header-block">
@@ -88,8 +88,7 @@
                                 </div>
                       	</div>
 
-
-            <div class="col-xl-12">                       
+                        <div class="col-xl-4">                       
                                 <div class="card card-primary">
                                     <div class="card-header">
                                         <div class="header-block">
@@ -105,8 +104,6 @@
                                     </div>                                  
                                 </div>
                         </div>
-
-		
 				</div>
 	</section>
 </article>
