--- a/cliente/templates/cliente/retiroCliente.html
+++ b/cliente/templates/cliente/retiroCliente.html
@@ -92,7 +92,7 @@
 
                                                     <div class="btn-group">
 
-                                                        <button type="button" class="btn btn-info dropdown-toggle"
+                                                        <button type="button" class="btn btn-primary dropdown-toggle"
                                                             data-toggle="dropdown" aria-haspopup="true"
                                                             aria-expanded="false"><i class="fa fa-wrench"></i></button>
 
