--- a/cliente/templates/factura/verFactura.html
+++ b/cliente/templates/factura/verFactura.html
@@ -88,7 +88,7 @@
                 </div>
         </div>
     </div>
-    <a href="/generarFacturaPDF/{{ factura.id}}" class="btn btn-secondary btn-lg"><em
+    <a href="/generarFacturaPDF/{{ factura.id }}" class="btn btn-primary btn"><em
             class="fa fa-print"></em>Generar PDF</a>
 </div>
     </section>
