Arreglango los reportes

--- a/cliente/templates/cliente/listarClientes.html
+++ b/cliente/templates/cliente/listarClientes.html
@@ -39,8 +39,7 @@
                                                 <td><strong>#</strong> </td>
                                                 <td><strong>Ip del cliente</strong> </td>
                                                 <td><strong>Cedula</strong></td>
-                                                <td><strong>Nombre</strong></td>
-                                                <td><strong>Apellido</strong></td>
+                                                <td><strong>Nombres</strong></td>
                                                 <td><strong>Primer Telefono</strong></td>
                                                 <td><strong>Segundo Telefono</strong></td>
                                                 <td><strong>Valor de Instalacion</strong></td>
@@ -67,7 +66,6 @@
                                                 <td>{{fila.ip}}</td>
                                                 <td>{{fila.cedula}}</td>
                                                 <td>{{fila.nombre}}</td>
-                                                <td>{{fila.apellido}}</td>
                                                 <td>{{fila.telefono_uno}}</td>
                                                 <td>{{fila.telefonos_dos}}</td>
                                                 <td>{{fila.valor_instalacion}}</td>
@@ -138,13 +136,5 @@
             </div>
     </section>
 </article>
-<div class="go-top-container">
-    <div class="go-top-button">
-      <i class="fas fa-chevron-up"></i>
-    </div>
-  </div>
- 
-  <link rel="stylesheet" href="{% static 'css/gotup.css' %}">
-  <script src='{% static "js/goup.js" %}'></script>
 </body>
 {% endblock %}
