--- a/core/templates/comun/footer.html
+++ b/core/templates/comun/footer.html
@@ -4,7 +4,7 @@
                     <div class="footer-block author">
                         <ul>
                             <li> Creado por
-                                <a href="#">Juan Diego Polindara-2022-2023</a>
+                                <a href="https://github.com/DonJuan222" target="_blank">Juan Diego Polindara-2022-2023</a>
                             </li>
                             <!--
                             <li>
