--- a/core/templates/comun/sidebar.html
+++ b/core/templates/comun/sidebar.html
@@ -31,6 +31,21 @@
                                 </li>
                                 <!-- Fin de sub-menu de clientes -->
 
+                                <!-- Sub-menu de clientes-->
+                                <li>
+                                    <a href="">
+                                        <i class="fa fa-wifi"></i>Torre
+                                        <i class="fa arrow"></i>
+                                    </a>
+                                    <ul class="sidebar-nav">
+
+           <li><a href="/listarClientesTorre"><i class="fa fa-ellipsis-h"></i>Listar Clientes</a></li>                            
+            <li><a href="#"><i class="fa fa-plus"></i>Agregar cliente</a></li>
+ 
+                                    </ul>
+                                </li>
+                                <!-- Fin de sub-menu de clientes -->
+
                                 
                                 <!-- Sub-menu de Clientes Retirados-->
                                 <li>
